...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasksRv"
        android:layout_width="373dp"
        android:layout_height="381dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/addTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/homeToSettingsButton"
...
